--- a/Proj_Mutlu_Mueller/Proj_Mutlu_Mueller/Proj_Mutlu_Mueller.csproj
+++ b/Proj_Mutlu_Mueller/Proj_Mutlu_Mueller/Proj_Mutlu_Mueller.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7BF437CB-5C9C-4E2A-85A5-E9C45C878107}</ProjectGuid>
+    <ProjectGuid>{B13BB6CA-BF6B-4C86-9A80-9EEFBE12F8DB}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>FSST_projekt</RootNamespace>
-    <AssemblyName>FSST_projekt</AssemblyName>
+    <RootNamespace>Proj_Mutlu_Mueller</RootNamespace>
+    <AssemblyName>Proj_Mutlu_Mueller</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
